# StockAgent

./: README.md  api_client.js  index.html  main.py  pyproject.toml  style.css  ui_controller.js
src/: analysis_service.py  generate_historical_analysis.py  main.py
src/assets/: deepfund.db
src/config/: planner.yaml
src/config/provider/: ollama.yaml  yizhan.yaml
src/database/: sqlite_helper.py
src/util/: config.py
